--- a/My-design/mdc-103/package.json
+++ b/My-design/mdc-103/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdc-102-web",
+  "name": "mdc-103-web",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -22,9 +22,11 @@
   "dependencies": {
     "@material/button": "^1.0.1",
     "@material/drawer": "^1.0.1",
+    "@material/elevation": "^1.0.0",
     "@material/image-list": "^1.0.0",
     "@material/list": "^1.0.1",
     "@material/ripple": "^1.0.1",
-    "@material/textfield": "^1.0.1"
+    "@material/textfield": "^1.0.1",
+    "@material/typography": "^1.0.0"
   }
 }
